--- a/frontend/templates/result.html
+++ b/frontend/templates/result.html
@@ -34,6 +34,22 @@
         p {
             font-size: 18px;
             margin-bottom: 20px;
+            text-align: left;
+        }
+        
+        .filename {
+            font-size: 10px;
+            margin-top: 5px;
+            text-align: center;
+        }
+
+
+        img {
+            width: 100%;
+            max-width: 300px;
+            height: auto;
+            margin-bottom: 5px;
+            border-radius: 8px;
         }
 
         a {
@@ -54,8 +70,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Assessment Result for {{ filename }}</h1>
-        <p>{{ result }}</p>
+        <h1>Assessment Result</h1>
+        <img src="{{ url_for('uploaded_file', filename=filename) }}" alt="Uploaded Image">
+        <p class="filename">File Name: {{ filename }}</p>
+
+        <p>{{ answer }}</p>
+        <p>{{ explanation }}</p>
         <a href="{{ url_for('index') }}">Upload another image</a>
     </div>
 </body>
